<resources>
    <string name="app_name">Meetings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please fill all fields for registration!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="action_search_by_descr">Search by description</string>
    <string name="ok">OK</string>
    <string name="accept_action">Accept action</string>
    <string name="accept_add_new_meeting">Add new meeting?</string>
    <string name="accept_update_meeting">Update meeting?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="select_time">Select time</string>
    <string name="fio_hint">FIO</string>
    <string name="pos_hint">Position</string>
    <string-array name="priority_list">
        <item>High</item>
        <item>Normal</item>
        <item>Low</item>

    </string-array>
    <string name="title_activity_about_meeting">AboutMeetingActivity</string>

    <string name="action_settings">Settings</string>
    <string name="action_delete_meeting">Delete meeting</string>
    <string name="action_update_meeting">Update meeting</string>
    <string name="meetingDescription">meeting description</string>
    <string name="startdatemeeting">startDateMeeting</string>
    <string name="enddatemeeting">endDateMeeting</string>
    <string name="prioritymeetingview">priorityMeetingView</string>
    <string name="members_in_meeting">Members in meeting</string>
    <string name="meetingnameview">meetingNameView</string>
    <string name="meetingdescrview">meetingDescrView</string>
    <string name="startdate">startDate</string>
    <string name="starttime">startTime</string>
    <string name="endtimemeeting">endTimeMeeting</string>
    <string name="enddate">endDate</string>
    <string name="endtime">endTime</string>
    <string name="msg_meeting_updated">Meeting updated</string>
    <string name="msg_fill_all_fields">Please, fill all fields</string>
    <string name="new_meeting_title">New Meetings</string>
    <string name="new_meeting_text"> new meetings on today</string>
    <string name="save_to_csv">Save to csv format</string>
    <string name="root_path_csv">Path to directory with file</string>
    <string name="csv_file_name">.csv file name</string>
    <string name="save">Save</string>
    <string name="internet_connection_not_available">Internet connection not available. Working in offline mode</string>
    <string name="meeting_saved">Meetings saved to CSV:</string>
    <string name="enter_csv_path">Enter folder path</string>
    <string name="enter_path_here">Enter folder here..</string>
    <string name="enter_csv_name">Enter csv name</string>
    <string name="enter_name_here">Enter name here..</string>
    <string name="cancel">Cancel</string>
    <string name="meeting_save_failed">Saving failed</string>
    <string name="meeting_filename">meetings.csv</string>
</resources>
