<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/input_dialog">

    <TextView
        android:id="@+id/csv_name_input_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_csv_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <EditText
        android:id="@+id/csv_path_input_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_path_here"
        android:padding="10dp" />
    <TextView
        android:id="@+id/csv_path_input_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_csv_path"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <EditText
        android:id="@+id/csv_name_input_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name_here"
        android:padding="10dp" />

</LinearLayout>