<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search_by_descr"
        android:orderInCategory="100"
        android:title="@string/action_search_by_descr"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        />
    <item
        android:id="@+id/action_save_to_csv"
        android:orderInCategory="100"
        android:title="@string/save_to_csv"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="never|collapseActionView"
        />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        android:icon="@android:drawable/ic_menu_manage"
        app:showAsAction="never" />
</menu>