<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.ssau.sanya.mettings.SaveToCSVActivity">

    <TextView
        android:id="@+id/root_path_csv_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/root_path_csv"
        />

    <EditText
        android:id="@+id/root_path_csv_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/root_path_csv_view"
        android:ems="10"
        android:inputType="text">

    </EditText>

    <TextView
        android:id="@+id/csv_file_name_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/root_path_csv_field"
        android:text="@string/csv_file_name" />

    <EditText
        android:id="@+id/csv_file_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/csv_file_name_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:inputType="text" />
    <Button
        android:id="@+id/btnSaveToCSVFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|bottom|center_horizontal|center"
        android:text="@string/save"
        android:layout_below="@id/csv_file_name_field"
        android:layout_marginTop="20dp"/>

</RelativeLayout>
